# openflight

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pylint.yml  pytest.yml  ui-build.yml
cad/: OPS243.stp
config/: alloy.alloy  credentials.env.example
docs/: CHANGELOG.md  PARTS.md  color_palette.html  raspberry-pi-setup.md  rolling_buffer_spin_detection.md  spin_detection_diagram.html  yolo-performance-tuning.md
scripts/: OpenFlightRollingBuffer.desktop  calibrate_camera.py  capture_iq.py  debug_gpio_output.py  debug_gpio_passthrough.py  debug_hardware_trigger.py  debug_radar_commands.py  diagnose_fft.py  setup_alloy.sh  start-kiosk.sh  test_bytetrack.py  test_sound_trigger.py  test_sound_trigger_gpio.py  test_sound_trigger_passthrough.py  test_sound_trigger_software.py  test_yolo_detection.py  train_golf_ball_yolo.ipynb  train_golf_ball_yolo11.ipynb
src/analysis/: README.md  analyze_capture.py
src/openflight/: camera_tracker.py  launch_monitor.py  ops243.py  server.py  session_logger.py
src/openflight/camera/: __init__.py  launch_angle.py  tracker.py
src/openflight/rolling_buffer/: __init__.py  monitor.py  processor.py  trigger.py  types.py
src/openflight/streaming/: __init__.py  cfar.py  processor.py
src/openlaunch/: __init__.py  camera_tracker.py  launch_monitor.py  ops243.py  server.py  session_logger.py
tests/: test_ops243.py  test_rolling_buffer.py
ui/: .gitignore  happo.config.mjs  package-lock.json  package.json
ui/.storybook/: main.ts  preview.ts
ui/src/: App.css  App.tsx
ui/src/components/: CameraFeed.tsx  ClubPicker.css  ClubPicker.tsx  DebugPanel.tsx  ShotDisplay.css  ShotDisplay.tsx  ShotList.css  ShotList.tsx
ui/src/components/LaunchDaddy/: LaunchDaddy.css  LaunchDaddyBrand.tsx  LaunchDaddyContext.tsx  LaunchDaddyOverlay.tsx  index.ts  launchDaddyTypes.ts  useLaunchDaddy.ts
ui/src/hooks/: useSocket.ts
ui/src/types/: shot.ts
